--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "@astrojs/vue": "^0.5.0",
-    "astro": "^1.0.0-rc.7",
+    "@types/luxon": "^3.2.0",
+    "astro": "^2.0.18",
     "vue-cli-plugin-vuetify": "~2.5.1",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   }
