--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "build": "astro build",
-    "astro": "astro",
-    "dev": "astro dev",
-    "preview": "astro preview",
-    "start": "astro dev"
+    "astro": "astro --port 4321",
+    "dev": "astro dev --port 4321",
+    "preview": "astro preview --port 4321",
+    "start": "astro dev --port 4321"
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
