--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "lodash": "^4.17.21",
     "luxon": "^3.0.3",
     "roboto-fontface": "*",
     "vue": "^3.4.21",
