--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "luxon": "^3.0.3",
     "roboto-fontface": "*",
     "vue": "^3.4.21",
@@ -20,7 +20,8 @@
   },
   "devDependencies": {
     "@astrojs/vue": "^0.5.0",
-    "@types/luxon": "^3.2.0",
+    "@types/lodash-es": "^4.17.12",
+    "@types/luxon": "^3.4.2",
     "astro": "^4.4.9",
     "vue-cli-plugin-vuetify": "~2.5.1",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
