--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "strict": true,
-    "importsNotUsedAsValues": "error",
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "verbatimModuleSyntax": true
   }
 }
